# ElectricPreacher

./: .clang-format  .count.sh  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CompileWindows.bat  Doxyfile  Makefile  README.md  TODO.md  assets  configure.sh  constants.hpp  constants.hpp.in  graph.py  main.cpp  manage.sh  meson.build  premake5.lua
.github/workflows/: githubci.yml  linux_build.yml  windows_build.yml
ElectricPreacher/assets/maps/: start.json
ElectricPreacher/src/: constants.hpp  main.cpp
ElectricPreacher/src-bak/map/: map_element.cpp  map_element.hpp  map_manager.cpp  map_manager.hpp
ElectricPreacher/src/game/: game.cpp  game.hpp
ElectricPreacher/src/map/: chunk.cpp  chunk.hpp  map_element.cpp  map_element.hpp  map_manager.cpp  map_manager.hpp
ElectricPreacher/src/player/: player.cpp  player.hpp
ElectricPreacher/src/scenes/: main_menu.cpp  main_menu.hpp  new_game.cpp  new_game.hpp  scene.cpp  scene.hpp
ElectricPreacher/src/utils/: build_windows.cpp  build_windows.hpp  utils.cpp  utils.hpp
MapEditor/: Makefile  fuzzyWaddle_Editor  main.cpp
MapEditor/includes/: button.h  constants.h  editor_ui.h
MapEditor/src/: button.cpp  editor_ui.cpp
MiniEngine/: Doxyfile  EngineDescription.drawio  miniengine
MiniEngine/src/: MiniEngine.hpp
MiniEngine/src/UI/: console.cpp  console.hpp  container.cpp  container.hpp  notification_center.cpp  notification_center.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
MiniEngine/src/core/: application.cpp  application.hpp  core.hpp  entrypoint.hpp  log.cpp  log.h  log.hpp  scene.cpp  scene.hpp  screen.cpp  screen.hpp
MiniEngine/src/event/: interactible.hpp  layer.cpp  layer.hpp  layer_manager.cpp  layer_manager.hpp
MiniEngine/src/graphics/: renderable.hpp  sprite.hpp  tileset.cpp  tileset.hpp
MiniEngine/src/math/: structures.hpp
MiniEngine/src/utils/: build_windows.cpp  build_windows.hpp  save_texture.cpp  save_texture.hpp  utils.hpp
assets/: Credits.md  ElectricPreacher.tiled-project
assets/UI/: LoadGameWindow.json  MainWindow.json  NewGameWindow.json  SecondWindow.json  setup.json
assets/images/tilesets/: outside.tsx
assets/maps/: start.json  start.tmx
assets/maps/tilesets/: icons.tsx
graph/: graph.py  requirements.txt  start_redis.sh
includes/: build_windows.hpp  button.h  button.hpp  chunk.h  chunk.hpp  console.h  console.hpp  constants.h  constants.hpp  container.h  game.hpp  ground_element.h  image_set.h  image_set.hpp  ltexture.h  map_element.h  map_element.hpp  map_manager.h  map_manager.hpp  notification.h  notification.hpp  notification_center.h  notification_center.hpp  player.hpp  scenery_element.h  screen.h  screen.hpp  text_input.h  text_input.hpp  utils.hpp  wall_element.h  widgets.h  window.h  window.hpp
includes/UI/: button.hpp  console.hpp  container.hpp  text_input.hpp  widgets.hpp  window.hpp
includes/constants/: constants.hpp.in
includes/game/: game.hpp
includes/json/: reader.h  writer.h
includes/map/: chunk.hpp  map_element.hpp  map_manager.hpp
includes/nlohmann/: json.hpp
includes/player/: player.hpp
includes/screen/: notification.hpp  notification_center.hpp  screen.hpp  tileset.hpp
includes/utils/: build_windows.hpp  utils.hpp
miniEngine/src/UI/: console.cpp  console.hpp  container.hpp  notification_center.cpp  notification_center.hpp  window.cpp  window.hpp
miniEngine/src/core/: log.cpp  screen.hpp
miniEngine/src/graphics/: tileset.cpp  tileset.hpp
scripts/: GenerateProjectFiles.bat  manage.sh
src/: button.cpp  chunk.cpp  console.cpp  container.cpp  game.cpp  ground_element.cpp  image_set.cpp  ltexture.cpp  map_element.cpp  map_manager.cpp  notification.cpp  notification_center.cpp  player.cpp  scenery_element.cpp  screen.cpp  text_input.cpp  utils.cpp  wall_element.cpp  widgets.cpp  window.cpp
src/UI/: CMakeLists.txt  button.cpp  console.cpp  container.cpp  meson.build  window.cpp
src/UI/includes/: button.hpp  console.hpp  container.hpp  text_input.hpp  widgets.hpp  window.hpp
src/UI/src/: button.cpp  console.cpp  container.cpp  text_input.cpp  window.cpp
src/constants/: constants.hpp
src/game/: CMakeLists.txt  game.cpp  meson.build
src/game/includes/: game.hpp
src/game/src/: game.cpp
src/map/: CMakeLists.txt  chunk.cpp  map_element.cpp  map_manager.cpp  meson.build
src/map/includes/: chunk.hpp  map_element.hpp  map_manager.hpp
src/map/src/: chunk.cpp  map_element.cpp  map_manager.cpp
src/player/: CMakeLists.txt  meson.build  player.cpp
src/player/includes/: player.hpp
src/player/src/: player.cpp
src/screen/: CMakeLists.txt  meson.build  notification.cpp  notification_center.cpp  screen.cpp  tileset.cpp
src/screen/includes/: image_set.hpp  notification.hpp  notification_center.hpp  screen.hpp  tileset.hpp
src/tinyxml/: CMakeLists.txt
src/utils/: CMakeLists.txt  build_windows.cpp  meson.build  utils.cpp
(+36 files in other folders)
